<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#F44336"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="iskyles.tacoma.uw.edu.dialogslab.MainActivity">


    <Button
        android:id="@+id/fire_missiles_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_fire_missiles"
        android:textColor="#000000"
        android:background="#36f4de"
        android:onClick="launch" />

    <Button
        android:id="@+id/list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_colors"
        android:textColor="#ffffff"
        android:background="#7536f4"
        android:onClick="launch" />

    <Button
        android:id="@+id/multi_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:background="#f1f436"
        android:text="@string/launch_multi_dialog"
        android:onClick="launch" />

    <Button
        android:id="@+id/custom_button"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:background="#f436b5"
        android:layout_height="wrap_content"
        android:text="@string/launch_custom_dialog"
        android:onClick="launch" />

    <Button
        android:id="@+id/time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:background="#39f436"
        android:text="@string/launch_time_picker_dialog"
        android:onClick="launch" />
    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:background="#f48836"
        android:text="@string/launch_date_picker_dialog"
        android:onClick="launch" />







</LinearLayout>
